--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma": "^0.9.4",
     "d3": "^7.8.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
